x.x.x xxxx-xx-xx
UI: App does not block when adding account as second device, but shows progress bar now

1.3.1 2023-12-16
UI: Click on header in chat view opens chat partner's profile (1:1 chats) or group edit page
UI: Show new message count in accounts overview
UI: Show state of outgoing message in chatlist (pending, sent or read)
UI: Add log viewer page
Bugfix: Corrected file/audio attachment preview area
Bugfix: Remove delay in loading of translations
Other: Redirect logs to file in app cache dir (deleted upon app closure)
Other: Synchronize state of received messages across devices (works only if mail server supports CONDSTORE)
Other: Use deltachat-core-rust v1.132.1
Internal: Add infrastructure for deltachat-core-rust jsonrpc calls

1.3.0 2023-12-03
Feature: Verified 1:1 chats
Feature: HTML message view
UI: Changed workflow for voice message recording
UI: Changed attachment preview in compose area
UI: Setting for font size in chatlist and chats
Other: Internal refactoring to reduce delay when opening a chat
Other: Use deltachat-core-rust v1.131.9
Bugfix: Deleting attachments from the compose area did not work in all cases
Bugfix: Changing the avatar in the profile settings is possible again

1.2.0 2023-10-27
Feature: Database encryption (config + text only, blobs remain unencrypted)
Feature: Small colored shape signalling connectivity state in chatlist view
UI: Add account ID to account info popup in Known Accounts page
Other: Use deltachat-core-rust v1.127.0
Other: In case of mismatch, filename extensions of image attachments are corrected so QML displays them
Bugfix: Delete temporary account if user cancels creation of new account via login
Bugfix: In some cases, large messages were not shown
Bugfix: Correctly handle account switch when in archive

1.1.1 2023-09-13
Bugfix: Settings item "Only fetch from DeltaChat folder" did not act correctly
Feature: Connectivity information